# portfolio

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: gh-pages-deploy.yml
src/: app.rs  main.rs
src/components/: bevy_waveform.rs  mod.rs  navigator.rs  page.rs  scroll.rs  timeline.rs  translation.rs
src/pages/: mod.rs
src/pages/about/: page.rs  socials.rs
src/pages/appendix/: page.rs
src/pages/galaga/: asset_loader.rs  asteroids.rs  camera.rs  collision_detection.rs  debug.rs  despawn.rs  mod.rs  movement.rs  page.rs  schedule.rs  spaceship.rs  state.rs  system.rs
src/pages/intro/: arrow.rs  mod.rs  page.rs  socials.rs
src/pages/reentry/: asset_loader.rs  calculation.rs  camera.rs  capsule.rs  earth.rs  mod.rs  movement.rs  notification.rs  page.rs  plugins.rs  system.rs
src/pages/skills/: page.rs
src/pages/timeline/: mod.rs  page.rs  twenty_five.rs  twenty_four.rs  twenty_three.rs  twenty_two.rs
src/pages/waveform/: animate.rs  mod.rs  page.rs  plugin.rs  request.rs  system.rs
style/: tailwind.css
