[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }

leptos_icons = { version = "0.5" }
icondata = { version = "0.5" }                                      # https://carloskiki.github.io/icondata/
leptos-use = { version = "0.15.7", features = ["use_window_size"] }
web-sys = { version = "0.3" }
strum = "0.26"
strum_macros = "0.26"

# gloo-net = { version = "0.2", features = ["http"] }
# log = "0.4"
