[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }

getrandom = { version = "0.3", features = ["wasm_js"] }
bevy = { version = "0.15" }
leptos-bevy-canvas = "0.2.0"
bevy_panorbit_camera = "0.21.1"

leptos_icons = { version = "0.5" }
icondata = { version = "0.5" }                                      # https://carloskiki.github.io/icondata/
leptos-use = { version = "0.15.7", features = ["use_window_size"] }
web-sys = { version = "0.3" }
strum = "0.26"
strum_macros = "0.26"
thaw = { version = "0.4.7", features = ["csr"] }
thaw_utils = "0.1.2"
# reentry_simulation = { git = "https://github.com/Flan8er/bevy_galaga", rev = "514498a850e683e1896be1d1c1ec40a4f9662abd" }
# reentry_simulation = { path = "../Vertec/bevy_galaga" }

# gloo-net = { version = "0.2", features = ["http"] }
# log = "0.4"
